--- a/style.css
+++ b/style.css
@@ -363,4 +363,22 @@ div#final-perder {
     top: 401px;
     left: 163px;
   }
+  .button-jogar {
+    width: 95px;
+    height: 90px;
+    border-radius: 20%;
+    font-size: 1.2rem;
+    background-color: #322717;
+    border: 4px solid #ffffff;
+    color: #ffffff;
+    /* border: none; */
+    position: absolute;
+    align-self: center;
+    top: 296px;
+    left: 53px;
+    cursor: pointer;
+    /* transition: all 0.4s; */
+    font-family: 'Poppins', sans-serif;
+    box-shadow: rgb(50 50 93 / 25%) 0px 13px 27px -5px, rgb(0 0 0 / 30%) 0px 8px 16px -8px;
+}
 }
